--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,11 +32,11 @@ dependencies:
     sdk: flutter
   url_launcher: ^6.3.0
   flutter_svg: ^2.0.9
+  flutter_staggered_grid_view: ^0.7.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  url_launcher: ^6.3.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -57,6 +57,11 @@ flutter:
     - assets/icons/topics/homemom.png
     - assets/icons/topics/careerwoman.png
     - assets/icons/topics/specialneeds.png
+    - assets/products/ebook_iman.png
+    - assets/products/ebook_wanita_karier.png
+    - assets/products/ebook_kesehatan_jiwa_anak.png
+    - assets/products/ebook_super_mom_abk.png
+    - assets/products/ebook_work_life_balance.png
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
