--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "liveServer.settings.port": 5501,
-    "cmake.sourceDirectory": "D:/backup/Documents/kampus/semester 7/magang/project/tenangkan"
+    "cmake.sourceDirectory": "D:/backup/Documents/kampus/semester 7/magang/project/tenangkan",
+    "cmake.ignoreCMakeListsMissing": true
 }
