--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ flutter:
     - assets/products/ebook_kesehatan_jiwa_anak.png
     - assets/products/ebook_super_mom_abk.png
     - assets/products/ebook_work_life_balance.png
+    - assets/event/
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
