--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,15 +28,20 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  http: ^1.2.0
   flutter:
     sdk: flutter
   url_launcher: ^6.3.0
   flutter_svg: ^2.0.9
   flutter_staggered_grid_view: ^0.7.0
+  firebase_core: ^3.0.0
+  firebase_messaging: ^15.0.0
+  flutter_local_notifications: ^19.0.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  cupertino_icons: ^1.0.8 
 dev_dependencies:
   flutter_test:
     sdk: flutter
