--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: ^3.0.0
   firebase_messaging: ^15.0.0
   flutter_local_notifications: ^19.0.0
+  firebase_auth: ^5.0.0  
 
 
   # The following adds the Cupertino Icons font to your application.
