--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,15 @@ dependencies:
   url_launcher: ^6.3.0
   flutter_svg: ^2.0.9
   flutter_staggered_grid_view: ^0.7.0
-  firebase_core: ^3.0.0
+ 
   firebase_messaging: ^15.0.0
   flutter_local_notifications: ^19.0.0
-  firebase_auth: ^5.0.0  
-
+   
+  firebase_core: ^3.6.0
+  firebase_auth: ^5.3.0
+  cloud_firestore: ^5.4.0
+  image_picker: ^1.1.2
+  firebase_storage: ^12.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
